--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
 
     //Design
     implementation 'com.google.android.material:material:1.0.0'
+
+    //leak canary
+    implementation 'com.squareup.leakcanary:leakcanary-android:2.1'
 }
