--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "ru.lm.itunesplayer"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_8
-        sourceCompatibility = 1.8
+        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility = 1.11
     }
     buildTypes {
         release {
@@ -25,15 +25,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     //GSON
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     //Lifecycle
     implementation 'android.arch.lifecycle:extensions:1.1.1'
@@ -57,12 +57,12 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.11.1'
 
     //Dagger2
-    implementation 'com.google.dagger:dagger-android:2.22.1'
+    implementation 'com.google.dagger:dagger-android:2.35.1'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.22.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.22.1'
 
     //Design
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.5.0'
 
     //leak canary
     implementation 'com.squareup.leakcanary:leakcanary-android:2.1'
